--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "4.3.0",
     "@astrojs/react": "4.3.0",
     "@tailwindcss/vite": "4.1.10",
     "@types/react": "19.1.8",
@@ -18,5 +19,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwindcss": "4.1.10"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "0.5.16"
   }
 }
